# Grafiki

./: .gitignore  .grafiki  .grafiki.capture.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Grafiki_Spec.md  LICENSE  PRD.md  PROJECT_STATUS.md  README.md  SECURITY.md
.claude/skills/verifier-grafiki-desktop/: SKILL.md
.claude/skills/verifier-grafiki-desktop/scripts/: click.applescript  window-rect.applescript
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Casks/: grafiki.rb
apps/grafiki-desktop/: index.html  package-lock.json  package.json  wdio.conf.js
apps/grafiki-desktop/src/: App.tsx  Onboarding.tsx  api.ts  layout.ts  main.tsx  styles.css  types.ts  useModalDialog.ts
apps/grafiki-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/grafiki-desktop/src-tauri/capabilities/: default.json
apps/grafiki-desktop/src-tauri/icons/: icon.icns
apps/grafiki-desktop/src-tauri/src/: lib.rs  main.rs  terminal.rs
apps/grafiki-desktop/tests/e2e/: smoke.spec.js
crates/grafiki-cli/: Cargo.toml
crates/grafiki-cli/src/: main.rs
crates/grafiki-cli/tests/: integration.rs
crates/grafiki-core/: Cargo.toml
crates/grafiki-core/src/: chat.rs  code_index.rs  confidence.rs  conflict.rs  decay.rs  embeddings.rs  error.rs  extract.rs  graph.rs  injection.rs  lib.rs  memory.rs  project.rs  reflection.rs  scope.rs  session.rs  transcript.rs  ulid.rs
crates/grafiki-core/src/db/: mod.rs  schema.rs
crates/grafiki-eval/: Cargo.toml
crates/grafiki-eval/fixtures/baselines/: baseline.json
crates/grafiki-eval/fixtures/redaction/: corpus_v1.jsonl
crates/grafiki-eval/fixtures/retrieval/grafiki_dev_v1/: corpus_seed.jsonl  dataset.json  qrels.tsv  queries.jsonl
crates/grafiki-eval/fixtures/retrieval/grafiki_graph_v1/: corpus_seed.jsonl  dataset.json  qrels.tsv  queries.jsonl  relations.jsonl
crates/grafiki-eval/fixtures/retrieval/grafiki_themes_v1/: corpus_seed.jsonl  dataset.json  qrels.tsv  queries.jsonl  relations.jsonl
crates/grafiki-eval/fixtures/supersession/grafiki_updates_v1/: updates.jsonl
crates/grafiki-eval/src/: config.rs  dataset.rs  lib.rs  main.rs  report.rs  seed.rs
crates/grafiki-eval/src/metrics/: classify.rs  ir.rs  mod.rs  stats.rs
crates/grafiki-eval/src/runner/: mod.rs  redaction.rs  reflection.rs  retrieval.rs  supersession.rs
crates/grafiki-eval/tests/: ci_regression.rs  metrics_oracle.rs  reflection_regression.rs  supersession_regression.rs
docs/: CHAT_DESIGN.md  CLIENT_SETUP.md  CODE_INDEX_DESIGN.md  COMPETITIVE_LANDSCAPE.md  CONFLICT_DESIGN.md  DECAY_DESIGN.md  DEMO_SCRIPT.md  DESIGN.md  DESKTOP_APP_PLAN.md  EVAL_DESIGN.md  INSTALL.md  LAUNCH_PLAN.md  POLISH_CHECKLIST.md  PRODUCTION_RELEASE.md  REFLECTION_DESIGN.md  RESEARCH_LANDSCAPE.md  ROADMAP.md  SECURITY_PRIVACY.md  SEMANTIC_SEARCH_PLAN.md  TESTING.md  UX_REDESIGN.md  color-preview.html
scripts/: build_desktop_debug.sh  prepare_desktop_sidecar.sh  smoke.sh  smoke_desktop.sh  smoke_fastembed.sh
