[workspace]
members = [
    "crates/grafiki-core",
    "crates/grafiki-cli",
    "apps/grafiki-desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Grafiki contributors"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ulid = "1"
fastembed = { version = "5.13.4", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
tempfile = "3"
sha2 = "0.10"
sqlite-vec = "0.1.9"
