[package]
name = "grafiki-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "grafiki"
path = "src/main.rs"

[dependencies]
clap.workspace = true
grafiki-core = { path = "../grafiki-core" }
serde.workspace = true
serde_json.workspace = true

[features]
default = []
fastembed = ["grafiki-core/fastembed"]
sqlite-vec = ["grafiki-core/sqlite-vec"]

[dev-dependencies]
tempfile.workspace = true
