[package]
name = "grafiki-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "grafiki_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "grafiki-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
grafiki-core = { path = "../../../crates/grafiki-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
